deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notg-reader
  namespace: notg-reader
spec:
  type: ClusterIP
  selector:
    app: notg-reader
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
